# libcppt

./: .travis.yml  CMakeLists.txt  README.md  utility.sh
add_msg/: CMakeLists.txt  package.xml
add_msg/msg/: ImuPredict.msg  Intervalimu.msg  RelativePoseIMU.msg
config/: euroc_config.yaml  mynteye_config.yaml  rviz_config.rviz  rviz_vio_config.rviz
config/calib/: d435i.yaml  euroc_config.yaml  mynteye_config.yaml  sim.yaml  simStereo.yaml  simkinect.yaml  tum.yaml  tum_omni.yaml  vi_car.yaml
config/docker/: Dockerfile  Dockerfile_cuda  opencv_with_cuda_ros  run_cppt_env.sh
config/docker/QtProject/: QtCreator.db  QtCreator.ini
config/docker/QtProject/qtcreator/: cmaketools.xml  debuggers.xml  default.qws  devices.xml  helpcollection.qhc  profiles.xml  qtversion.xml  toolchains.xml
config/docker/QtProject/qtcreator/qbs/1.10.1/: qbs.conf
config/docker/QtProject/qtcreator/qbs/1.10.1/profiles/qtc_Desktop_2e2dd0f4/modules/Qt/accessibility_support-private/: module.qbs
config/docker/QtProject/qtcreator/qbs/1.10.1/profiles/qtc_Desktop_2e2dd0f4/modules/Qt/bootstrap-private/: module.qbs
config/docker/QtProject/qtcreator/qbs/1.10.1/profiles/qtc_Desktop_2e2dd0f4/modules/Qt/concurrent/: module.qbs
config/docker/QtProject/qtcreator/qbs/1.10.1/profiles/qtc_Desktop_2e2dd0f4/modules/Qt/concurrent-private/: module.qbs
config/docker/QtProject/qtcreator/qnx/: qnxconfigurations.xml
config/milestone/: VSLAM.xmind
examples/vio/: CMakeLists.txt  package.xml  rgbd_node.cpp  vio_node.cpp
examples/vio/launch/: d435i.launch  euroc.launch  euroc_gdb.launch  kinect_simUGV.launch  mynt.launch  mynt_gdb.launch  sim.launch  sim_withLidar.launch  sim_withLidar_gdb.launch  stereo_simUGV.launch  tum.launch  tum_gdb.launch  vi_car.launch
examples/vio/src/: CameraPoseVisualization.cpp  ros_utility.h  visualization.cpp  visualization.h
examples/vo/: CMakeLists.txt  package.xml  player_node.cpp
examples/vo/launch/: euroc.launch  euroc_gdb.launch  mynt.launch
future/: CMakeLists.txt  package.xml
future/src/: IMUPreintegrator.cpp  IMUPreintegrator.h  backend.cpp  backend.h  camera.cpp  camera.h  config_loader.cpp  config_loader.h  converter.cpp  converter.h  feature_tracker.cpp  feature_tracker.h  imu_preintegration.cpp  imu_preintegration.h  stereo_matcher.cpp  stereo_matcher.h  system.cpp  system.h  util.cpp  util.h
future/src/ceres/: imu_factor.cpp  imu_factor.h  local_parameterization_se3.cpp  local_parameterization_se3.h  projection_factor.cpp  projection_factor.h
future/src/vins/: imu_factor.h  integration_base.cpp  integration_base.h  marginalization_factor.cpp
global_opt/: CMakeLists.txt  package.xml
global_opt/src/: global_opt.cpp  global_opt.h  global_opt_node.cpp  globalfactor.cpp  globalfactor.h
loam/: CMakeLists.txt  package.xml
loam/include/vloam_velodyne/: common.h
loam/launch/: aloam_velodyne_HDL_32.launch  aloam_velodyne_HDL_64.launch  aloam_velodyne_VLP_16.launch  aloam_velodyne_odom.launch  kitti_helper.launch
loam/parameters/: lidar_16.yaml
loam/rviz_cfg/: aloam_velodyne.rviz  vloam_velodyne.rviz
loam/src/: laserMapping.cpp  laserMapping.h  laserOdometry.cpp  lidarFactor.cpp  lidarFactor.h  lidarFactor.hpp  ori_laserodometry.cpp  scanRegistration.cpp
modules/: CMakeLists.txt  a.cpp  example.h  package.xml
modules/back_end/: backend.cpp  backend.h  cam_state.h  imu_preintegration.cpp  imu_preintegration.h  imu_state.cpp  imu_state.h  isam2_backend.cpp  isam2_backend.h  msckf.cpp  msckf.h  simple_backend.cpp  simple_backend.h  sparse_img_align.cpp  sparse_img_align.h  sparse_img_align_impl.cpp  sparse_img_align_impl.h
modules/basic_datatype/: basic_sensor.cpp  basic_sensor.h  frame.cpp  frame.h  imu_data.h  mappoint.cpp  mappoint.h  sliding_window.cpp  sliding_window.h  so3_extent.cpp  so3_extent.h  tic_toc.h  util_datatype.cpp  util_datatype.h
modules/camera_model/: camera.cpp  camera.h  pinhole_camera.cpp  pinhole_camera.h  pinhole_camera_test.cpp  simple_stereo_camera.cpp  simple_stereo_camera.h  stereo_camera.cpp  stereo_camera.h  stereo_camera_test.cpp
modules/ceres/: intensity_factor.cpp  intensity_factor.h  local_parameterization_se3.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.cpp  projection_factor.h
modules/dummy/: CMakeLists.txt
modules/front_end/: frontend_config.cpp  frontend_config.h  image_processor.cpp  image_processor.h  imu_preintegration.cpp  imu_preintegration.h  simple_frontend.cpp  simple_frontend.h  sparse_img_align.cpp  sparse_img_align.h  utility.cpp  utility.h
modules/system/: vio_system.cpp  vio_system.h  vo_system.cpp  vo_system.h
modules/test/: gtsam_test.cpp  openmp_test.cpp
ros/: CMakeLists.txt  player_node.cpp
ros/launch/: euroc.launch  euroc_gdb.launch  mynt.launch
src/: CMakeLists.txt  backend.cpp  backend.h  camera.h  config_loader.cpp  config_loader.h  converter.cpp  converter.h  feature_tracker.cpp  feature_tracker.h  line_stereo_matcher.cpp  line_stereo_matcher.h  line_tracker.cpp  line_tracker.h  package.xml  pl_backend.cpp  pl_backend.h  pl_rgbd_backend.cpp  pl_rgbd_backend.h  pl_rgbd_system.cpp  pl_rgbd_system.h  pl_system.cpp  pl_system.h  pose_faster.cpp  pose_faster.h  relocalization.cpp  relocalization.h  rgbd_backend.cpp  rgbd_backend.h  rgbd_system.cpp  rgbd_system.h  stereo_matcher.cpp  stereo_matcher.h  system.cpp  system.h  thread_pool_mgr.cpp  thread_pool_mgr.h  util.cpp  util.h
src/ceres/: lidar_factor.cpp  lidar_factor.h  line_projection_factor.cpp  line_projection_factor.h  local_parameterization_line.cpp  local_parameterization_line.h  local_parameterization_se3.cpp  local_parameterization_se3.h  local_parameterization_so3.cpp  local_parameterization_so3.h  pose_graph.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
src/l1_solver/: README  solve_dalm.cpp  solve_dalm.h  test_dalm.cpp
src/plucker/: line.cpp  line.h  line_test.cpp
src/vins/: imu_factor.cpp  imu_factor.h  integration_base.cpp  marginalization_factor.cpp  marginalization_factor.h
tests/: CMakeLists.txt
(+51 files in other folders)
