<?xml version="1.0"?>
<package format="2">
  <name>add_msg</name>
  <version>0.0.0</version>
  <description>The add_msg package</description>
  <maintainer email="boy7302013@gmail.com">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <depend>rosbag</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
