<?xml version="1.0"?>
<package format="2">
  <name>global_opt</name>
  <version>0.0.0</version>
  <description>The global_opt package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>
  <depend>cppt</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
