<?xml version="1.0"?>
<package>
  <name>cppt</name>
  <version>1.0.0</version>
  <description>
    TODO
  </description>
  <author>Yi-Ren Liu</author>
  <maintainer email="yirenliu0909@gmail.com">Yi-Ren Liu</maintainer>
  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. use build_depend -->
  <!-- Dependencies needed after this package is compiled. use run_depend -->
  <build_depend>cmake_modules</build_depend>  

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>add_msg</build_depend>
  <run_depend>add_msg</run_depend>
</package>
