<?xml version="1.0"?>
<package>
  <name>cppt_player</name>
  <version>0.0.0</version>
  <description>
    cppt_player
  </description>
  <author>Yi-Ren Liu</author>
  <maintainer email="yirenliu0909@gmail.com">Yi-Ren Liu</maintainer>
  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. use build_depend -->
  <!-- Dependencies needed after this package is compiled. use run_depend -->
  <build_depend>cmake_modules</build_depend>  

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>nav_msgs</build_depend> <!-- for publish odometry -->
  <run_depend>nav_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>cppt_modules</build_depend>
  <run_depend>cppt_modules</run_depend>

  <build_depend>systrace</build_depend>
  <run_depend>systrace</run_depend>
</package>
